--- a/src/styles/Blog.scss
+++ b/src/styles/Blog.scss
@@ -42,6 +42,7 @@
   background-color: #5e4fea;
 
   &-cta {
+    z-index: 100;
     text-decoration: none;
     font-weight: 300;
     background: transparent;
