--- a/src/styles/Blog.scss
+++ b/src/styles/Blog.scss
@@ -47,10 +47,12 @@
     font-weight: 300;
     background: transparent;
     color: #fafafa;
-    border: 3px solid #5e4fea;
+    // border: 3px solid #5e4fea;
+    border: 3px solid red;
     border-radius: 50px;
     white-space: nowrap;
     padding: 12px 24px;
+    margin: 12px 0;
     cursor: pointer;
     transition: background 300ms;
     &:hover {
