added the first iteration of the about page

--- a/src/styles/Blog.scss
+++ b/src/styles/Blog.scss
@@ -194,7 +194,7 @@
       justify-content: space-around;
       align-items: center;
       > h1 {
-        padding: 20px;
+        padding: 20px 0;
         font-size: 1.8rem;
         background: transparent;
         color: #fafafa;
