gsap tween to contact page on render

--- a/src/styles/ContactPage.scss
+++ b/src/styles/ContactPage.scss
@@ -15,6 +15,8 @@
     }
   }
   > header {
+    transform: translateY(-40px);
+    opacity: 0;
     margin: 0 7vw;
     padding-top: 13px;
     height: 93px;
@@ -27,6 +29,8 @@
     }
   }
   > main {
+    transform: translateY(60px);
+    opacity: 0;
     margin: 0 7vw;
     padding-bottom: 50px;
     min-height: 600px;
