--- a/src/styles/ContactPage.scss
+++ b/src/styles/ContactPage.scss
@@ -2,6 +2,58 @@
   min-height: 100vh;
   width: 100%;
   background: #1c1a46;
+  &-submitmsg {
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    z-index: 100000;
+    background: rgba(0, 0, 0, 0.479);
+    > div {
+      display: flex;
+      align-items: center;
+      height: 140px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      border-radius: 20px;
+      > div {
+        border: none;
+        height: 100%;
+        width: 30px;
+        overflow: hidden;
+        background: #49c65e;
+        border-bottom-left-radius: 20px;
+        border-top-left-radius: 20px;
+      }
+      > img {
+        height: 50%;
+        padding: 20px;
+      }
+      > section {
+        padding: 20px;
+        > h1 {
+          color: #1c1a45;
+        }
+        > p {
+          color: #908faf;
+        }
+      }
+      > button {
+        cursor: pointer;
+        margin-left: 100px;
+        height: 100%;
+        padding: 0 20px;
+        border-bottom-right-radius: 20px;
+        border-top-right-radius: 20px;
+        border: none;
+        font-size: 1.3rem;
+        font-weight: 600;
+        color: #fafafa;
+        background: #49c65e;
+      }
+    }
+  }
   &-back {
     height: 38px;
     width: 38px;
@@ -283,6 +335,33 @@
       }
       > form {
         grid-column: 1/-1;
+      }
+    }
+    &-submitmsg {
+      position: fixed;
+      height: 100vh;
+      width: 100%;
+      z-index: 100000;
+      background: rgba(0, 0, 0, 0.479);
+      > div {
+        flex-direction: column;
+        height: 50vh;
+        > div {
+          height: 20%;
+          width: 100%;
+          border-radius: 20px 20px 0 0;
+        }
+        > section {
+          text-align: center;
+          padding: 30px;
+        }
+        > button {
+          width: 100%;
+          margin: 0;
+          margin-top: 20px;
+          border-radius: 0 0 20px 20px;
+          height: 40%;
+        }
       }
     }
   }
