--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -99,7 +99,7 @@
       }
       > h1 {
         font-size: 1.8rem;
-        margin-bottom: 20px;
+        margin-bottom: 34px;
         font-weight: 400;
         color: #fafafa;
         background: transparent;
@@ -115,7 +115,10 @@
         border-radius: 300px;
         border: none;
         cursor: pointer;
-        transition: background 300ms;
+        transition: all 300ms ease;
+        &:hover {
+          filter: drop-shadow(0 0 15px #5e4fe9);
+        }
       }
     }
   }
