--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -197,6 +197,7 @@
           font-size: 1.1rem;
           color: #9392b8;
           margin: 20px 0 50px 0;
+          line-height: 140%;
         }
         > div {
           > article {
@@ -480,6 +481,15 @@
         }
       }
     }
+    &-content {
+      > section {
+        > div {
+          > p {
+            font-size: 0.9rem;
+          }
+        }
+      }
+    }
   }
 }
 
@@ -605,9 +615,6 @@
           > h2 {
             font-size: 1rem;
           }
-          > p {
-            font-size: 0.8rem;
-          }
         }
       }
     }
@@ -640,9 +647,6 @@
         > div {
           > h1 {
             font-size: 1.8rem;
-          }
-          > p {
-            font-size: 0.8rem;
           }
         }
       }
