--- a/src/styles/Services.scss
+++ b/src/styles/Services.scss
@@ -5,7 +5,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   &-text {
     padding-top: 50px;
@@ -32,7 +32,7 @@
     align-items: end;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 40px;
-    padding-bottom: 50px;
+    padding-bottom: 150px;
     &-item {
       display: flex;
       justify-content: center;
@@ -174,14 +174,6 @@
   }
 }
 
-@media all and (max-width: 925px) {
-  .services {
-    &-text {
-      padding-top: 120px;
-    }
-  }
-}
-
 @media all and (max-width: 720px) {
   .services {
     &-glass {
@@ -219,7 +211,6 @@
         font-size: 0.9rem;
       }
       padding-bottom: 160px;
-      padding-top: 63px;
     }
   }
 }
