--- a/src/styles/ContactPage.scss
+++ b/src/styles/ContactPage.scss
@@ -234,6 +234,45 @@
   }
 }
 
+@media (min-width: 3260px) {
+  .contact-page {
+    > main {
+      > section {
+        grid-column: 3/6;
+      }
+      > form {
+        grid-column: 9/-3;
+      }
+    }
+  }
+}
+
+@media (min-width: 2100px) and (max-width: 3250px) {
+  .contact-page {
+    > main {
+      > section {
+        grid-column: 3/6;
+      }
+      > form {
+        grid-column: 8/-3;
+      }
+    }
+  }
+}
+
+@media (min-width: 1800px) and (max-width: 2099px) {
+  .contact-page {
+    > main {
+      > section {
+        grid-column: 2/6;
+      }
+      > form {
+        grid-column: 8/-2;
+      }
+    }
+  }
+}
+
 @media all and (max-width: 1050px) {
   .contact-page {
     > main {
