--- a/src/styles/Blog.scss
+++ b/src/styles/Blog.scss
@@ -504,19 +504,25 @@
     &-item {
       width: 68%;
     }
+
+    > footer {
+      > main {
+        > p {
+          font-size: 0.8rem;
+        }
+      }
+    }
+  }
+}
+
+@media all and (max-width: 400px) {
+  .blog {
     > header {
       > h1 {
         font-size: 1.8rem;
       }
       > p {
         font-size: 0.8rem;
-      }
-    }
-    > footer {
-      > main {
-        > p {
-          font-size: 0.8rem;
-        }
       }
     }
   }
