--- a/src/styles/Blog.scss
+++ b/src/styles/Blog.scss
@@ -8,7 +8,7 @@
   color: #1c1a46;
 }
 .rec.rec-carousel {
-  > button {
+  > a {
     &:hover {
       color: #fafafa;
       background: #1c1a46;
@@ -137,7 +137,8 @@
       background-repeat: no-repeat;
       background-color: transparent;
     }
-    > button {
+    > a {
+      text-decoration: none;
       font-size: 1.3rem;
       font-weight: 500;
       background-color: #6c63ff;
@@ -297,7 +298,7 @@
       > img {
         margin: 25px 0;
       }
-      > button {
+      > a {
         font-size: 1.1rem;
         padding: 10px 20px;
         align-self: center;
@@ -345,7 +346,7 @@
       > img {
         margin: 30px 0;
       }
-      > button {
+      > a {
         font-size: 1.3rem;
         padding: 12px 24px;
         align-self: flex-start;
@@ -465,7 +466,7 @@
       > img {
         margin: 25px 0;
       }
-      > button {
+      > a {
         font-size: 1.1rem;
         padding: 10px 20px;
         align-self: flex-start;
@@ -493,7 +494,7 @@
     }
   }
   .rec.rec-carousel {
-    > button {
+    > a {
       display: none;
     }
   }
@@ -568,7 +569,7 @@
       > img {
         margin: 25px 0;
       }
-      > button {
+      > a {
         font-size: 0.9rem;
         padding: 8px 16px;
         align-self: flex-start;
