--- a/src/styles/Portfolio.scss
+++ b/src/styles/Portfolio.scss
@@ -73,7 +73,8 @@
           text-align: center;
           padding-bottom: 30px;
         }
-        > button {
+        > a {
+          text-decoration: none;
           font-size: 1.5rem;
           font-weight: 500;
           background-color: #6c63ff;
@@ -216,7 +217,7 @@
           > p {
             font-size: 0.9rem;
           }
-          > button {
+          > a {
             font-size: 1.5rem;
           }
         }
@@ -248,7 +249,7 @@
           > p {
             font-size: 0.8rem;
           }
-          > button {
+          > a {
             font-size: 1.2rem;
           }
         }
